# AI

./: App.css  App.jsx  Dockerfile  FastAPI.py  chat_history.json  convoRAG.py  index.html  key.py  main.jsx  main.py  uiRAG.py
UIRAG/: FastAPI.py
UIRAG/static/: index.html
sqldb/: docker-compose.yml
sqldb/backend/: Dockerfile  dockerfile  main.py  pyproject.toml
sqldb/frontend/: Dockerfile  dockerfile  index.html  package-lock.json  package.json
sqldb/frontend/src/: App.css  App.jsx  app.css  app.jsx
sqldb/init/: init.sql
