[project]
name = "docmind-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncpg",
    "python-dotenv",
    "langchain",
    "langchain-groq",
    "langchain-community",
    "langchain-huggingface",
    "langchain-text-splitters",
    "pypdf",
    "sentence-transformers",
]